# dental-dicom-portal

./: .env.production  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/middleware/: audit.py
backend/app/models/: __init__.py  assignment.py  audit.py  doctor.py  patient.py  session.py  study.py
backend/app/routers/: assignments.py  audit_logs.py  auth.py  doctors.py  health.py  patients.py  sessions.py
backend/app/schemas/: __init__.py  assignment.py  audit_log.py  patient.py  session.py  study.py
backend/app/services/: __init__.py  __main__.py  dicom_ingestion.py  dicom_parser.py  dicom_watcher.py  file_manager.py  guacamole_client.py  patients.py  session_monitor.py  sessions.py  winrm_client.py
backend/scripts/: cleanup-session.ps1  create-rds-session.ps1  launch-dtx-studio.ps1
backend/systemd/: dental-api.service  dental-dicom-watcher.service  dental-session-cleanup.service  dental-session-cleanup.timer  dicom-watcher.service
backend/tests/: conftest.py  test_audit_session.py  test_dicom_ingestion.py  test_dicom_parser.py  test_file_manager.py  test_patients_api.py  test_sessions_api.py
docs/: DEPLOYMENT.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/: clear-session.html
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AdminLayout.tsx  (+3 more)
nginx/: nginx.dev.conf  nginx.prod.conf
scripts/: init-databases.sql
(+21 files in other folders)
