[project]
name = "dental-dicom-portal-backend"
version = "0.1.0"
description = "Dental DICOM Portal - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.1.0",
    "pydicom>=2.4.0",
    "watchdog>=3.0.0",
    "pywinrm>=0.4.3",
    "python-keycloak>=3.9.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
